# qa_documents

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
src/: constants.py
src/models/: embeddings.py  llm.py
src/repositories/: data_extraction.py
src/utils/: file_management.py
